# curly

./: Cargo.toml  README.md
curly/: Cargo.toml  README.md  pseudocode.rs
curly/src/: error.rs  errors.rs  formatters.rs  formatting.rs  lib.rs  parsing.rs
curly_codegen/: Cargo.toml
curly_codegen/src/: lib.rs
curly_codegen_impl/: Cargo.toml
curly_codegen_impl/src/: derive.rs  lib.rs  util.rs
curly_derive/: Cargo.toml
curly_derive/src/: impl.rs  lib.rs
testing/: Cargo.toml
testing/src/: main.rs
