[package]
name = "curly"
version = "0.0.1"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "Type-safe runtime text formatting for humans."
homepage = "https://github.com/ThePuzzlemaker/curly.git"
repository = "https://github.com/ThePuzzlemaker/curly.git"
license = "MIT"

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"