[package]
name = "curly"
version = "0.0.1"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "Type-safe runtime text formatting for humans."
homepage = "https://github.com/ThePuzzlemaker/curly.git"
repository = "https://github.com/ThePuzzlemaker/curly.git"
license = "MIT"

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"

[dependencies.curly_derive]
path = "../curly_derive"
version = "*"
optional = true

[features]
# Default features.
# Includes derivation of `Provider` with `curly_derive`
default = ["derive"]

# Derivation of the `Provider` trait
derive = ["curly_derive"]

