[package]
name = "curly_codegen_impl"
version = "0.0.1"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "Codegen implementations for Curly, a type-safe runtime text formatting library for humans."
homepage = "https://github.com/ThePuzzlemaker/curly.git"
repository = "https://github.com/ThePuzzlemaker/curly.git"
license = "MIT"

[dependencies]
syn = "1.0.41"
quote = "1.0.7"
proc-macro2 = "1.0"
proc-macro-crate = "0.1.5"

[features]
default = []

# Implementation for #[derive(Provider)], used by `curly_derive`
derive = []