[package]
name = "testing"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curly = { version = "0.0.1", path = "../curly" }
curly_derive = { version = "0.0.1", path = "../curly_derive" }
